Fixed alignment of subsections

--- a/src/mkdocs_pagetree_plugin/assets/mkdocs_pagetree_plugin.css
+++ b/src/mkdocs_pagetree_plugin/assets/mkdocs_pagetree_plugin.css
@@ -5,7 +5,7 @@
  */
 
 .pagetree {
-  --caret-indent: 0.9em;
+  --caret-indent: 1em;
   --list-item-margin-vertical: 0.25em;
 }
 
@@ -32,6 +32,11 @@
 
 .pagetree li:has(> details){
   list-style-type: none !important;
+  margin-left: calc(-1 * var(--caret-indent)) !important;
+}
+
+.pagetree details ul {
+  padding-left: calc(2 * var(--caret-indent)) !important
 }
 
 .pagetree summary {
@@ -48,7 +53,7 @@
   display: inline-block;
   width: 0.6em;
   height: 1em;
-  margin: 0 0.25em 0 0;
+  margin: 0 0.5em 0 0;
   background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMCIgaGVpZ2h0PSIxMCIgdmlld0JveD0iLTIgMCAxMCAxMCI+PHBhdGggZmlsbD0ibm9uZSIgc3Ryb2tlPSJjdXJyZW50Q29sb3IiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIgc3Ryb2tlLWxpbmVqb2luPSJyb3VuZCIgc3Ryb2tlLXdpZHRoPSIyIiBkPSJtMSA5IDQtNC00LTQiLz48L3N2Zz4=');
   background-size: contain;
   background-position: left center;
